# liblg

./: CMakeLists.txt
Lua_style_vm/: CMakeLists.txt
Lua_style_vm/lang/: Allocator.cpp  Allocator.h  Class.cpp  Class.h  FunctionProto.h  GlobalContext.cpp  GlobalContext.h  MemoryBlock.cpp  MemoryBlock.h  Object.cpp  Object.h  OpCode.h  Scope.cpp  Scope.h  Type.h  VM.cpp  VM.h  Value.cpp  Value.h  cons.cpp  cons.h  macro.h
Lua_style_vm/lang/common/: StringRef.cpp  StringRef.h  c_common.h  common.h  common_base.h
Lua_style_vm/lang/types/: base_types.h
Lua_style_vm/lang/utils/: Arrays.hpp  hash.h  primitive_cmp.hpp  structs.cpp  structs.h
Lua_style_vm/runtime/: Array.cpp  Array.h  CallFrame.h  Exception.h  IObjectType.h  Instruction.h  LoopState.h  String.h  Table.h  TypeDelegate.h  TypeDelegateFactory.cpp  TypeDelegateFactory.h  Upvalue.h  VM.cpp  VM.h  VMTracker.cpp  VMTracker.h  Value.h  common_base.h  context.h  opcode.h
Lua_style_vm/runtime/impl/: ArrayTypeDelegate.h  BaseTypeDelegates.h  BoolTypeDelegate.h  CFunctionTypeDelegate.h  ClosureTypeDelegate.h  StringTypeDelegate.h  TableTypeDelegate.h
Lua_style_vm/runtime/utils/: ArrayParser.h  ConstantPool.h  ConstantPool_test.cpp  HighPerformanceHashTable.h  ModuleConstantPool.h  Numbers.hpp  StringInternPool.h  VirtualVector.h  primitive_cmp.hpp  privates.h
Lua_style_vm/src/: demo2.cpp  demo2_1.cpp  main.cpp
Lua_style_vm/test/: VMTester.h  demo2_1.cpp  test_array.cpp  test_array_parser.cpp  test_inst_base.cpp
Lua_style_vm/test_bak/: main0.cpp
bench/: lgasm
h7/: CMakeLists.txt  work.md
h7/common/: StringRef.cpp  StringRef.h  c_common.h  common.h  common_base.h
h7/src/: Call.h  Object.h  Op.cpp  Op.h  Stack.cpp  Stack.h  Type.cpp  Type.h  VM.cpp  VM.h  Value.cpp  Value.h  bset.c  bset.h  buf.c  cmp.c  cons.cpp  cons.h  util.c  vec.c  vec.h
h7/src/lang/: Allocator.cpp  Allocator.h  Class.cpp  Class.h  GlobalContext.cpp  GlobalContext.h  MemoryBlock.cpp  MemoryBlock.h  Object.cpp  Object.h  RuntimeContext.cpp  RuntimeContext.h  Scope.cpp  Scope.h  macro.h
h7/src/types/: FloatType.h  IntType.h  StringType.h
h7/utils/: Numbers.hpp  structs.cpp  structs.h
h7l_test/: CMakeLists.txt
h7l_test/src/: catch_test.h  test_MemoryBlock.cpp  test_common.h  test_object.cpp
liblg/: CMakeLists.txt  add_ins.md
liblg/src/: fibrec.c  lgasm.cpp
liblg/src/lg/: op.h
src/lg/: op.c  type.h  vm.c
